--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
 </head>
 <body>
     <h2>Hello World</h2>
+    <h3>ami dev 1</h3>
+    <form action="">
+        <input type="text">
+        <input type="text">
+        <input type="text">
+    </form>
 </body>
 </html>
